[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/donut.png" type="Texture" id=1]
[ext_resource path="res://title_screen/title_screen.gd" type="Script" id=2]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/laptop.png" type="Texture" id=4]
[ext_resource path="res://assets/pen.png" type="Texture" id=5]
[ext_resource path="res://assets/mouse.png" type="Texture" id=6]
[ext_resource path="res://assets/glasses.png" type="Texture" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glass" type="Sprite" parent="."]
position = Vector2( 83.818, 73.744 )
rotation = -0.780919
scale = Vector2( 0.143621, 0.143621 )
texture = ExtResource( 7 )

[node name="Laptop" type="Sprite" parent="."]
position = Vector2( 582.015, 24.9141 )
rotation = 0.421963
scale = Vector2( 0.143621, 0.143621 )
texture = ExtResource( 4 )

[node name="Mouse" type="Sprite" parent="."]
position = Vector2( 563.929, 296.912 )
rotation = -0.908192
scale = Vector2( 0.143621, 0.143621 )
texture = ExtResource( 6 )

[node name="Pen" type="Sprite" parent="."]
position = Vector2( 141.106, 290.927 )
rotation = -0.780919
scale = Vector2( 0.143621, 0.143621 )
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -120.0
margin_right = 152.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleImage" type="TextureRect" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 150.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 304.0
margin_bottom = 180.0

[node name="CreditsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 0 )
text = "credits"

[node name="TutorialButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 0 )
text = "how to play"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 304.0
margin_bottom = 210.0
alignment = 1

[node name="NewGameButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 0 )
text = "start"

[node name="SettingsButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 0 )
text = "settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 304.0
margin_bottom = 240.0
text = "quit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
